# django-log-reader

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: installation.rst  log-reader-ripgrep-fallback-2026-04-03.md  repo-polish-2026-04-03.md  requirements.rst  todo-ripgrep-fallback-2026-04-03.md
log_reader/: admin.py  apps.py  models.py  settings.py  utils.py
log_reader/tests/: settings.py  test_admin.py  test_models.py  test_security.py  test_utils.py
